# hipfire

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CONTRIBUTING.md  Cargo.toml  README.md  attention_hfq4_kv-hip-amdgcn-amd-amdhsa-gfx1010.bc  attention_hfq4_kv-hip-amdgcn-amd-amdhsa-gfx1010.hipi  attention_hfq4_kv-hip-amdgcn-amd-amdhsa-gfx1010.out  attention_hfq4_kv-hip-amdgcn-amd-amdhsa-gfx1010.s  flake.nix  results.tsv
cli/: index.ts  parse_tool_calls.test.ts  registry.json
crates/hipfire-runtime/: Cargo.toml
crates/hipfire-runtime/examples/: a3b_load_check.rs  a3b_multiturn_oneshot.rs  a3b_smoke_forward.rs  bench_early_exit.rs  bench_qwen35_forward.rs  bench_qwen35_mq4.rs  build_kld_ref.rs  channel_test_mmq.rs  check_think_tokens.rs  daemon.rs  decode_tokens.rs  dflash_smoke.rs  dflash_spec_demo.rs  dump_logits_qwen35.rs  encode_prompt.rs  eval_gguf.rs  eval_hipfire.rs  greedy_dump.rs  greedy_dump_top5.rs  infer.rs  infer_hfq.rs  infer_qwen3.rs  infer_qwen35.rs  infer_vl.rs  logit_dump.rs  pflash_compress_demo.rs  pflash_load_demo.rs  pflash_niah_bench.rs  prefill_microbench.rs  probe_argmax_agreement.rs  profile_attention_phases.rs  profile_bandwidth_fwd.rs  profile_deltanet.rs  profile_host_vs_gpu.rs  profile_layers.rs  profile_qwen35_mq4.rs  run.rs  smoke_llama_prefill_batch.rs  sweep_exit.rs  teacher_eval.rs  (+11 more)
crates/hipfire-runtime/src/: arch.rs  hfq.rs  lib.rs  llama.rs  tokenizer.rs
crates/hipfire-runtime/tests/: channel_order.rs
docs/: BENCHMARKS.md  CONFIG.md  DFLASH_INJECTIONS.md  DFLASH_MORNING_REPORT.md  DFLASH_OVERNIGHT_PROMPT.md  NIXOS.md  (+4 more)
(+209 files in other folders)
